--- a/VG_ motorkolcsonzo/index.html
+++ b/VG_ motorkolcsonzo/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <title>VG Motorok</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/tesztvezetes.css">
-    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/motorkolcsonzo.css">
+    <script src="js/motorkolcsonzo.js"></script>
 </head>
 
 <body>
